--- a/comcastHealthCareHospitalSystemGIUIFrameWork/test-output/index.html
+++ b/comcastHealthCareHospitalSystemGIUIFrameWork/test-output/index.html
@@ -7,7 +7,7 @@
 
     <link type="text/css" href="testng-reports1.css" rel="stylesheet" id="ultra" />
     <link type="text/css" href="testng-reports.css" rel="stylesheet" id="retro" disabled="false"/>
-    <script type="text/javascript" src="jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="jquery.min.js"></script>
     <script type="text/javascript" src="testng-reports.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type='text/javascript'>
@@ -21,7 +21,8 @@
      -->
   </head>
 
-  <body>    <div class="top-banner-root">
+  <body>
+    <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
@@ -50,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\chana\AppData\Local\Temp\testng-eclipse-1971735609\testng-customsuite.xml</span>
+                    <span>C:\Users\chana\AppData\Local\Temp\testng-eclipse-2094148626\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.comcast.HMS.staff.CreateStaffAndVerifyTestNew" class="method navigator-link" hash-for-method="staffActiveMemberTestNew">staffActiveMemberTestNew</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.camcast.HMS.patient.PatientBatchTest" class="method navigator-link" hash-for-method="patientInfoCheckTest">patientInfoCheckTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.comcast.HMS.staff.CreateStaffAndVerifyTestNew</span>
+              <span class="class-name">com.camcast.HMS.patient.PatientBatchTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="staffActiveMemberTestNew">
-                  </a> <!-- staffActiveMemberTestNew -->
-                  <span class="method-name">staffActiveMemberTestNew</span>
+                  <a name="patientInfoCheckTest">
+                  </a> <!-- patientInfoCheckTest -->
+                  <span class="method-name">patientInfoCheckTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\chana\AppData\Local\Temp\testng-eclipse-1971735609\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\chana\AppData\Local\Temp\testng-eclipse-2094148626\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +146,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.comcast.HMS.staff.CreateStaffAndVerifyTestNew&quot;&gt;
+      &lt;class name=&quot;com.camcast.HMS.patient.PatientBatchTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;staffActiveMemberTestNew&quot;/&gt;
+          &lt;include name=&quot;patientInfoCheckTest&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.comcast.HMS.staff.CreateStaffAndVerifyTestNew --&gt;
+      &lt;/class&gt; &lt;!-- com.camcast.HMS.patient.PatientBatchTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -174,10 +175,10 @@
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="test-group">
-              <span class="test-group-name">Integration</span>
+              <span class="test-group-name">System</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">staffActiveMemberTestNew</span>
+                <span class="method-in-group-name">patientInfoCheckTest</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -199,14 +200,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'staffActiveMemberTestNew')
-data.setCell(0, 2, 'com.comcast.HMS.staff.CreateStaffAndVerifyTestNew')
-data.setCell(0, 3, 1561);
+data.setCell(0, 1, 'patientInfoCheckTest')
+data.setCell(0, 2, 'com.camcast.HMS.patient.PatientBatchTest')
+data.setCell(0, 3, 656);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 656 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,13 +222,15 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">1 ignored method</span>
+            <span class="header-content">2 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.comcast.HMS.staff.CreateStaffAndVerifyTestNew</span>
+              <span class="ignored-class-name">com.camcast.HMS.patient.PatientBatchTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">createDocAndVerifyTestNew</span>
+                <span class="ignored-method-name">createPatientAndAdmittTest</span>
+                <br/>
+                <span class="ignored-method-name">patientOPDdocDetailsTest</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -239,34 +242,34 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.comcast.HMS.staff.CreateStaffAndVerifyTestNew</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.camcast.HMS.patient.PatientBatchTest</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">configBS</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">configBC(BROWSER)</span>
-                <span class="method-start">199 ms</span>
+                <span class="method-start">216 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">configBM</span>
-                <span class="method-start">2735 ms</span>
+                <span class="method-start">2667 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">staffActiveMemberTestNew</span>
-                <span class="method-start">3573 ms</span>
+                <span class="method-name">patientInfoCheckTest</span>
+                <span class="method-start">4123 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">configAM</span>
-                <span class="method-start">5137 ms</span>
+                <span class="method-start">4782 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">configAC</span>
-                <span class="method-start">5140 ms</span>
+                <span class="method-start">4783 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <span class="method-name">configAS</span>
-                <span class="method-start">5470 ms</span>
+                <span class="method-start">5121 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
