--- a/comcastHealthCareHospitalSystemGIUIFrameWork/test-output/old/Suite/classes.html
+++ b/comcastHealthCareHospitalSystemGIUIFrameWork/test-output/old/Suite/classes.html
@@ -30,26 +30,78 @@
 <tr>
 <td>&nbsp;</td>
 <td>configBC</td>
-<td>&nbsp;</td></tr>
+<td>Integration Smoke System </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>configBM</td>
-<td>&nbsp;</td></tr>
+<td>Integration Smoke System </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>configAM</td>
-<td>&nbsp;</td></tr>
+<td>Integration Smoke System </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>configAC</td>
-<td>&nbsp;</td></tr>
+<td>Integration Smoke System </td>
+</tr>
+<tr>
+<td>com.comcast.HMS.staff.CreateStaffAndVerifyTestNew</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>staffActiveMemberTest</td>
+<td>Integration </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>createDocAndVerifyTest</td>
+<td>System </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>configBC</td>
+<td>Integration Smoke System </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>configBM</td>
+<td>Integration Smoke System </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>configAM</td>
+<td>Integration Smoke System </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>configAC</td>
+<td>Integration Smoke System </td>
+</tr>
 </table>
