--- a/comcastHealthCareHospitalSystemGIUIFrameWork/test-output/old/Suite/methods-alphabetical.html
+++ b/comcastHealthCareHospitalSystemGIUIFrameWork/test-output/old/Suite/methods-alphabetical.html
@@ -1,34 +1,50 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c19091">  <td>25/03/13 18:11:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAC()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@3349e9bb]">&lt;&lt;configAC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1645957110</td>   <td></td> </tr>
-<tr bgcolor="c19091">  <td>25/03/13 18:11:45</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAM()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@3349e9bb]">&lt;&lt;configAM</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1645957110</td>   <td></td> </tr>
-<tr bgcolor="c19091">  <td>25/03/13 18:11:45</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAM()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@3349e9bb]">&lt;&lt;configAM</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1645957110</td>   <td></td> </tr>
-<tr bgcolor="c19091">  <td>25/03/13 18:11:45</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAM()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@3349e9bb]">&lt;&lt;configAM</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1645957110</td>   <td></td> </tr>
-<tr bgcolor="c19091">  <td>25/03/13 18:11:46</td>   <td>338</td> <td title="&lt;&lt;BaseClass.configAS()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@13c9d689]">&lt;&lt;configAS</td> 
+<tr bgcolor="916c74">  <td>25/03/14 17:24:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAC()[pri:0, instance:com.comcast.HMS.staff.CreateStaffAndVerifyTestNew@145f66e3]">&lt;&lt;configAC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1437014053</td>   <td></td> </tr>
+<tr bgcolor="916c74">  <td>25/03/14 17:24:18</td>   <td>-9680</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAC()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@49e53c76]">&lt;&lt;configAC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1437014053</td>   <td></td> </tr>
+<tr bgcolor="916c74">  <td>25/03/14 17:24:18</td>   <td>-9682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAM()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@49e53c76]">&lt;&lt;configAM</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1437014053</td>   <td></td> </tr>
+<tr bgcolor="916c74">  <td>25/03/14 17:24:18</td>   <td>-9682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAM()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@49e53c76]">&lt;&lt;configAM</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1437014053</td>   <td></td> </tr>
+<tr bgcolor="916c74">  <td>25/03/14 17:24:27</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAM()[pri:0, instance:com.comcast.HMS.staff.CreateStaffAndVerifyTestNew@145f66e3]">&lt;&lt;configAM</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1437014053</td>   <td></td> </tr>
+<tr bgcolor="916c74">  <td>25/03/14 17:24:27</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAM()[pri:0, instance:com.comcast.HMS.staff.CreateStaffAndVerifyTestNew@145f66e3]">&lt;&lt;configAM</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1437014053</td>   <td></td> </tr>
+<tr bgcolor="916c74">  <td>25/03/14 17:24:18</td>   <td>-9682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAM()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@49e53c76]">&lt;&lt;configAM</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1437014053</td>   <td></td> </tr>
+<tr bgcolor="916c74">  <td>25/03/14 17:24:28</td>   <td>272</td> <td title="&lt;&lt;BaseClass.configAS()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@5bf0d49]">&lt;&lt;configAS</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="c19091">  <td>25/03/13 18:11:25</td>   <td>-20220</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBC(java.lang.String)[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@3349e9bb]">&gt;&gt;configBC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1645957110</td>   <td></td> </tr>
-<tr bgcolor="c19091">  <td>25/03/13 18:11:25</td>   <td>-20220</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBC(java.lang.String)[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@13c9d689]">&gt;&gt;configBC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@463305241</td>   <td></td> </tr>
-<tr bgcolor="c19091">  <td>25/03/13 18:11:42</td>   <td>-3310</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBM()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@3349e9bb]">&gt;&gt;configBM</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1645957110</td>   <td></td> </tr>
-<tr bgcolor="c19091">  <td>25/03/13 18:11:42</td>   <td>-3310</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBM()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@3349e9bb]">&gt;&gt;configBM</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1645957110</td>   <td></td> </tr>
-<tr bgcolor="c19091">  <td>25/03/13 18:11:42</td>   <td>-3310</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBM()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@3349e9bb]">&gt;&gt;configBM</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1645957110</td>   <td></td> </tr>
-<tr bgcolor="c19091">  <td>25/03/13 18:11:28</td>   <td>-17783</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBM()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@13c9d689]">&gt;&gt;configBM</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@463305241</td>   <td></td> </tr>
-<tr bgcolor="c19091">  <td>25/03/13 18:11:25</td>   <td>-20589</td> <td title="&gt;&gt;BaseClass.configBS()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@13c9d689]">&gt;&gt;configBS</td> 
+<tr bgcolor="916c74">  <td>25/03/14 17:24:02</td>   <td>-25070</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBC(java.lang.String)[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@49e53c76]">&gt;&gt;configBC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1437014053</td>   <td></td> </tr>
+<tr bgcolor="916c74">  <td>25/03/14 17:24:18</td>   <td>-9396</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBC(java.lang.String)[pri:0, instance:com.comcast.HMS.staff.CreateStaffAndVerifyTestNew@145f66e3]">&gt;&gt;configBC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1437014053</td>   <td></td> </tr>
+<tr bgcolor="916c74">  <td>25/03/14 17:24:02</td>   <td>-25070</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBC(java.lang.String)[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@5bf0d49]">&gt;&gt;configBC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@609372062</td>   <td></td> </tr>
+<tr bgcolor="916c74">  <td>25/03/14 17:24:25</td>   <td>-2104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBM()[pri:0, instance:com.comcast.HMS.staff.CreateStaffAndVerifyTestNew@145f66e3]">&gt;&gt;configBM</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1437014053</td>   <td></td> </tr>
+<tr bgcolor="916c74">  <td>25/03/14 17:24:15</td>   <td>-12498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBM()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@49e53c76]">&gt;&gt;configBM</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1437014053</td>   <td></td> </tr>
+<tr bgcolor="916c74">  <td>25/03/14 17:24:15</td>   <td>-12498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBM()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@49e53c76]">&gt;&gt;configBM</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1437014053</td>   <td></td> </tr>
+<tr bgcolor="916c74">  <td>25/03/14 17:24:15</td>   <td>-12498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBM()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@49e53c76]">&gt;&gt;configBM</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1437014053</td>   <td></td> </tr>
+<tr bgcolor="916c74">  <td>25/03/14 17:24:25</td>   <td>-2104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBM()[pri:0, instance:com.comcast.HMS.staff.CreateStaffAndVerifyTestNew@145f66e3]">&gt;&gt;configBM</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1437014053</td>   <td></td> </tr>
+<tr bgcolor="916c74">  <td>25/03/14 17:24:04</td>   <td>-23134</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBM()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@5bf0d49]">&gt;&gt;configBM</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@609372062</td>   <td></td> </tr>
+<tr bgcolor="916c74">  <td>25/03/14 17:24:02</td>   <td>-25286</td> <td title="&gt;&gt;BaseClass.configBS()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@5bf0d49]">&gt;&gt;configBS</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="bf786e">  <td>25/03/13 18:11:30</td>   <td>-15453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientBatchTest.createPatientAndAdmittTest()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@3349e9bb]">createPatientAndAdmittTest</td> 
-  <td>TestNG-tests-1@1645957110</td>   <td></td> </tr>
-<tr bgcolor="bf786e">  <td>25/03/13 18:11:41</td>   <td>-4212</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientBatchTest.patientInfoCheckTest()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@3349e9bb]">patientInfoCheckTest</td> 
-  <td>TestNG-tests-1@1645957110</td>   <td></td> </tr>
-<tr bgcolor="bf786e">  <td>25/03/13 18:11:43</td>   <td>-2843</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientBatchTest.patientOPDdocDetailsTest()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@3349e9bb]">patientOPDdocDetailsTest</td> 
-  <td>TestNG-tests-1@1645957110</td>   <td></td> </tr>
+<tr bgcolor="deb2b1">  <td>25/03/14 17:24:20</td>   <td>-7144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateStaffAndVerifyTestNew.createDocAndVerifyTest()[pri:0, instance:com.comcast.HMS.staff.CreateStaffAndVerifyTestNew@145f66e3]">createDocAndVerifyTest</td> 
+  <td>TestNG-tests-1@1437014053</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>25/03/14 17:24:06</td>   <td>-21771</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientBatchTest.createPatientAndAdmittTest()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@49e53c76]">createPatientAndAdmittTest</td> 
+  <td>TestNG-tests-1@1437014053</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>25/03/14 17:24:14</td>   <td>-13310</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientBatchTest.patientInfoCheckTest()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@49e53c76]">patientInfoCheckTest</td> 
+  <td>TestNG-tests-1@1437014053</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>25/03/14 17:24:15</td>   <td>-12260</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PatientBatchTest.patientOPDdocDetailsTest()[pri:0, instance:com.camcast.HMS.patient.PatientBatchTest@49e53c76]">patientOPDdocDetailsTest</td> 
+  <td>TestNG-tests-1@1437014053</td>   <td></td> </tr>
+<tr bgcolor="deb2b1">  <td>25/03/14 17:24:25</td>   <td>-1877</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateStaffAndVerifyTestNew.staffActiveMemberTest()[pri:0, instance:com.comcast.HMS.staff.CreateStaffAndVerifyTestNew@145f66e3]">staffActiveMemberTest</td> 
+  <td>TestNG-tests-1@1437014053</td>   <td></td> </tr>
 </table>
