--- a/comcastHealthCareHospitalSystemGIUIFrameWork/test-output/old/Suite/methods-not-run.html
+++ b/comcastHealthCareHospitalSystemGIUIFrameWork/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.csatcast.HMS.BaseTest.BaseClass.configAS</td></tr>
+<tr><td>com.csatcast.HMS.BaseTest.BaseClass.configBS</td></tr>
+<tr><td>com.csatcast.HMS.BaseTest.BaseClass.configAS</td></tr>
+<tr><td>com.csatcast.HMS.BaseTest.BaseClass.configBS</td></tr>
 </table>
